--- a/Assets/Scripts/Editor/Unity.RenderStreaming.Template.Editor.asmdef
+++ b/Assets/Scripts/Editor/Unity.RenderStreaming.Template.Editor.asmdef
@@ -1,14 +1,11 @@
 {
-    "name": "Unity.RenderStreaming.RuntimeTests",
+    "name": "Unity.RenderStreaming.Template.Editor",
     "references": [
-        "Unity.WebRTC"
-    ],
-    "optionalUnityReferences": [
-        "TestAssemblies"
+        "Unity.RenderStreaming.Template.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": true,
+    "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
