--- a/Packages/com.unity.renderstreaming/package.json
+++ b/Packages/com.unity.renderstreaming/package.json
@@ -1,22 +1,11 @@
 {
   "name": "com.unity.renderstreaming",
-  "displayName": "Unity Render Streaming",
-  "version": "1.2.3-preview",
+  "displayName": "Unity Render Streaming (Tomi)",
+  "version": "1.2.4",
   "unity": "2019.3",
   "description": "This is a package for using Unity Render Streaming technology. It contains two samples to use the technology.",
   "dependencies": {
-    "com.unity.webrtc": "1.1.2-preview",
-    "com.unity.inputsystem": "1.0.0-preview.4"
-  },   
- "samples": [ {
-     "displayName": "HDRP",
-     "description": "HDRP Unity Render Streaming Sample",
-     "path": "Samples~/HDRP"
-   }, 
-   {
-     "displayName": "URP",
-     "description": "URP Unity Render Streaming Sample",
-     "path": "Samples~/URP"
-   }
- ]
+    "com.unity.webrtc": "https://github.com/tkslan/com.unity.webrtc.git#fix/Tomi",
+    "com.unity.inputsystem": "1.0.0"
+  }
 }
