--- a/package.json
+++ b/package.json
@@ -3,5 +3,5 @@
   "displayName": "Unity Render Streaming (Tomi)",
   "version": "1.2.4",
   "unity": "2019.3",
-  "description": "This is a package for using Unity Render Streaming technology. It contains two samples to use the technology.",
+  "description": "This is a package for using Unity Render Streaming technology. It contains two samples to use the technology."
 }
